[WebGPU] Crash running compute_pipeline overrides CTS https://bugs.webkit.org/show_bug.cgi?id=275258 <radar://129404225>

Reviewed by Tadeu Zagallo.

Workaround crash in https://gpuweb.github.io/cts/standalone/?q=webgpu:api,operation,compute_pipeline,overrides:computed:*
until https://bugs.webkit.org/show_bug.cgi?id=275010 is addressed.

* Source/WebGPU/WGSL/WGSL.cpp:
(WGSL::evaluate):
* Source/WebGPU/WGSL/WGSL.h:
* Source/WebGPU/WebGPU/ComputePipeline.mm:
(WebGPU::metalSize):
* Source/WebGPU/WebGPU/Pipeline.mm:
(WebGPU::createLibrary):

Canonical link: https://commits.webkit.org/279825@main